[gd_scene load_steps=3 format=3 uid="uid://devy0pwhd8gpc"]

[ext_resource type="Script" uid="uid://c7dnjx10rry4q" path="res://scripts/ui/mode_card.gd" id="1_ndo2r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r07v3"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.49803922)
shadow_size = 2
shadow_offset = Vector2(2, 2)

[node name="ModeCard" type="Button"]
custom_minimum_size = Vector2(0, 80)
offset_right = 8.0
offset_bottom = 8.0
flat = true
script = ExtResource("1_ndo2r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r07v3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "模式名称"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.78431374, 0.78431374, 0.78431374, 1)
theme_override_font_sizes/font_size = 14
text = "模式的简短描述"
horizontal_alignment = 1
